<resources>
    <string name="app_name">VacanciesApp</string>
    <string name="textViewed">Просмотрено</string>
    <string name="text_header_title">Все вакансии КР</string>
    <string name="text_header_version">Версия: 1.0</string>
    <string name="text_drawer_searching">Поиск</string>
    <string name="text_marked_vacancies">Избранные вакансии</string>
    <string name="text_about">О нас</string>
    <string name="text_exit">Выход</string>
    <string name="text_details_previous">Предыдущее</string>
    <string name="text_details_next">Следующее</string>
    <string name="btnCall">ПОЗВОНИТЬ</string>
    <string name="details_page_label">Вакансии</string>
    <string name="text_in_tvSalary_when_nodata">Договорная</string>
    <string name="about_us">О нас</string>
    <string name="text_about_us">О нас</string>
    <string name="e_mail_auuu_kg_gmail_com">Наш E-mail</string>
    <string name="text_favorite_on_toolbar">Избранные вакансии</string>
    <string name="text_function_is_not_available">Функция недоступна!</string>
    <string name="text_on_searching_mode_of_working">Режим работы</string>
    <string name="text_on_searching_salary">Оклад</string>
    <string name="text_radiobtn_any">Любой</string>
    <string name="text_radiobtn_fullday">Полный день</string>
    <string name="text_radiobtn_flexible">Гибкий</string>
    <string name="text_radiobtn_distantible">Удаленно</string>
    <string name="text_radiobtn_nighty">Ночной</string>
    <string name="text_radiobtn_salary_any">Любой</string>
    <string name="text_radiobtn_salary5000">5 000+</string>
    <string name="text_radiobtn_salary10000">10 000+</string>
    <string name="text_radiobtn_salary30000">30 000+</string>
    <string name="button_searching_reset">СБРОС</string>
    <string name="button_searching_done">ГОТОВО</string>
    <string name="btn_search_on_toolbar">Поиск</string>
    <string name="text_no_tel_num">Не указан</string>
    <string name="searching">Поиск</string>
    <string name="hint_searching">Поиск</string>
    <string name="searching_advanced">Расширенный поиск</string>
    <string name="about_adding_prof">Чтобы получать подходящие вакансии, необходимо ввести профессию</string>
    <string name="btn_adding_prof">Добавить профессию</string>
    <string name="btn_cancel">ОТМЕНА</string>
    <string name="btn_save">СОХРАНИТЬ</string>
    <string name="text_profession">Profession</string>
    <string name="text_about_adding_prof_dialog">Сохраните профессию, чтобы получать подходящие специально для Вас вакансии</string>
    <string name="empty_search">Персональный поиск пустой</string>
    <string name="add_search">Добавить поиск</string>
    <string name="search_btn">НАЙТИ</string>
    <string name="error_loading_vacancies">Ошибка загрузки вакансий</string>
</resources>