<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_on_searching_mode_of_working"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/searchTermsGroupTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_any"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radioButtonFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_fullday"
            />

        <RadioButton
            android:id="@+id/radioButtonFlex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_flexible"
            />

        <RadioButton
            android:id="@+id/radioButtonDistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_distantible"
            />

        <RadioButton
            android:id="@+id/radioButtonNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_nighty"
            />
    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_on_searching_salary"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/searchTermsGroupSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonSalaryAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_salary_any"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonSalary5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_salary5000" />

        <RadioButton
            android:id="@+id/radioButtonSalary10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_salary10000" />

        <RadioButton
            android:id="@+id/radioButtonSalary30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radiobtn_salary30000" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_style"
            android:text="@string/button_searching_reset"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_style"
            android:text="@string/button_searching_done"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>