<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_searching_style"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorBackgroundTextViewSearching"
        android:gravity="center|start"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/text_on_searching_mode_of_working"
        android:textColor="@color/colorTextTextViewSearching"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp">

        <RadioGroup
            android:id="@+id/radioModeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow>

                    <RadioButton
                        android:id="@+id/rbModeAny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_any" />

                    <RadioButton
                        android:id="@+id/rbModeDistant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_distantible" />
                </TableRow>

                <TableRow>

                    <RadioButton
                        android:id="@+id/rbModeFullDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_fullday"
                        android:layout_marginRight="10dp" />

                    <RadioButton
                        android:id="@+id/rbModeNighty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_nighty" />
                </TableRow>

                <TableRow>

                    <RadioButton
                        android:id="@+id/rbModeFlexible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_flexible" />
                </TableRow>
            </TableLayout>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorBackgroundTextViewSearching"
        android:gravity="center|start"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/text_on_searching_salary"
        android:textColor="@color/colorTextTextViewSearching"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="14dp"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp">

        <RadioGroup
            android:id="@+id/radioSalaryGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow>

                    <RadioButton
                        android:id="@+id/rbSalaryAny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_salary_any"
                        android:layout_marginRight="50dp"/>

                    <RadioButton
                        android:id="@+id/rbSalary10000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_salary10000" />
                </TableRow>

                <TableRow>

                    <RadioButton
                        android:id="@+id/rbSalary5000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_salary5000" />

                    <RadioButton
                        android:id="@+id/rbSalary30000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_radiobtn_salary30000" />
                </TableRow>
            </TableLayout>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/button_searching_style"
            android:text="@string/button_searching_reset"
            android:textColor="@color/colorTextInBtnSearching" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/button_searching_style"
            android:text="@string/button_searching_done"
            android:textColor="@color/colorTextInBtnSearching" />
    </LinearLayout>
</LinearLayout>