<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkPurple"
        android:theme="@style/BackPressedArrowColor"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/linearPress"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorDarkPurple"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llPressPrevious"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_prev" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/text_details_previous"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPressNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/text_details_next"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_next" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fillViewport="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBorderCardView"
                app:cardCornerRadius="3dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="1dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTopic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:textColor="@color/colorDarkPurple" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_description_position" />

                            <TextView
                                android:id="@+id/tvEmployerName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginStart="5dp"
                                android:maxLength="20"
                                android:padding="5dp" />

                            <TextView
                                android:id="@+id/tvWhenCreated"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:maxLength="23"
                                android:padding="5dp"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_salary" />

                            <TextView
                                android:id="@+id/tvSalary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginStart="5dp"
                                android:maxLength="15"
                                android:maxLines="1"
                                android:padding="5dp" />

                            <android.support.constraint.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/tvFromSite"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    android:layout_marginRight="8dp"
                                    android:background="@drawable/frame_textview"
                                    android:padding="5dp"
                                    android:textSize="16sp"
                                    app:layout_constraintEnd_toEndOf="parent" />
                            </android.support.constraint.ConstraintLayout>

                        </LinearLayout>

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_telephone" />

                                <TextView
                                    android:id="@+id/tvTelephoneNumber"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginStart="5dp"
                                    android:maxLength="20"
                                    android:maxLines="1"
                                    android:padding="5dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintEnd_toEndOf="parent">

                                <CheckBox
                                    android:id="@+id/cbCheckbox"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:layout_marginBottom="10dp"
                                    android:layout_marginEnd="7dp"
                                    android:layout_marginRight="7dp"
                                    android:button="@drawable/checkbox_select"
                                    android:paddingBottom="10dp" />
                            </LinearLayout>
                        </android.support.constraint.ConstraintLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="8dp"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvDetailsAboutVacancy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp" />
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <Button
            android:id="@+id/btnCallNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorDarkOrange"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_call_on_btn_in_details"
            android:drawableStart="@drawable/ic_call_on_btn_in_details"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/btnCall"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>